daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N7_unsorted_roster/AuthMsg.hex
8378216461796c696768742e617574686f72697a6174696f6e2e6d6573736167652e763675575543492d4441594c494748543a415554483a76365840549f7b2423cfbdc7b591f62d1d9a6299db502907250c00fb92d137d72e1b7d28b33b31b5fe68e26685b8d31ac6a1f7157287031d8d5c416275330a9e260a45e1
